<package>
  <name>recorder_description</name>
  <version>0.1.0</version>

  <description>This package contains a URDF of recorder.</description>
  <author email="jypjypjypjyp@hotmail.com">jyp</author>

  <maintainer email="jypjypjypjyp@hotmail.com">jyp</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
